# chronoview

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MOTIVATION.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: project-phoenix.timeline  quickstart.timeline
server/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  railway.toml
server/alembic/: env.py
server/alembic/versions/: 499f96d0f469_make_dates_nullable_for_unplanned_items.py  a1b2c3d4e5f6_add_kind_to_milestones.py  b2c3d4e5f6a7_add_url_to_tasks.py  c3d4e5f6a7b8_add_jwt_auth_fields.py  cbf393309be2_initial_schema.py  d4e5f6a7b8c9_add_timeline_collaborators.py  e5f6a7b8c9d0_add_timeline_versions.py  f6a7b8c9d0e1_add_content_column.py
server/app/: auth.py  config.py  main.py  schemas.py
server/app/api/: auth.py  share.py  timelines.py
server/app/core/: google_auth.py  security.py  timeline_parser.py
server/app/models/: __init__.py  timeline.py
web/: .dockerignore  .env.example  .env.production.example  Caddyfile  Dockerfile  Dockerfile.dev  biome.json  entrypoint.sh  index.html  package.json  pnpm-lock.yaml  railway.toml  tailwind.config.js  vite.config.ts  vitest.config.ts
web/public/: config.template.js
web/src/: App.tsx  main.tsx
web/src/components/: ErrorBoundary.tsx
web/src/lib/: api.ts  auth-api.ts  auth.tsx  types.ts  (+8 more)
(+21 files in other folders)
